--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,15 +22,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
 
       - name: Extract metadata (tags, labels) for Docker
         id: meta
@@ -42,11 +45,23 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
 
-      - name: Build Docker image
+      - name: Build Docker image (stage 1)
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
         with:
-          context: .
+          context: ./stage1
+          push: false
+          platforms: linux/armhf
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:stage1
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Build Docker image (stage 2)
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: ./stage2
           push: ${{ github.event_name != 'pull_request' }}
           platforms: linux/armhf
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
