multi-job staged build

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,51 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-image:
+  build-image-stage1:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=ref,event=branch
+            type=ref,event=pr
+
+      - name: Build Docker image (stage 1)
+        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        with:
+          context: ./stage1
+          push: false
+          platforms: linux/armhf
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:stage1
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          outputs: type=docker,dest=/tmp/stage1.tar
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: stage1
+          path: /tmp/stage1.tar
+
+  build-image-stage2:
+    needs: build-image-stage1
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -45,15 +89,16 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
 
-      - name: Build Docker image (stage 1)
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      - name: Download artifact
+        uses: actions/download-artifact@v3
         with:
-          context: ./stage1
-          push: false
-          platforms: linux/armhf
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:stage1
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          name: stage1
+          path: /tmp
+
+      - name: Load image
+        run: |
+          docker load --input /tmp/stage1.tar
+          docker image ls -a
 
       - name: Build Docker image (stage 2)
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
