--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,7 +104,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: ./stage2
-          build-contexts: ghcr.io/bjia56/armv7l-wheel-builder:stage1=docker-image://ghcr.io/bjia56/armv7l-wheel-builder:stage1
+          build-contexts: stage1=docker-image://ghcr.io/bjia56/armv7l-wheel-builder:stage1
           push: ${{ github.event_name != 'pull_request' }}
           platforms: linux/armhf
           tags: ${{ steps.meta.outputs.tags }}
