--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,23 +28,13 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=semver,pattern={{version}}
-            type=ref,event=branch
-            type=ref,event=pr
-
       - name: Build Docker image (stage 1)
         uses: docker/build-push-action@v3
         with:
           context: ./stage1
           push: false
           platforms: linux/armhf
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:stage1
+          tags: stage1:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
           outputs: type=docker,dest=/tmp/stage1.tar
@@ -108,14 +98,14 @@ jobs:
       - name: Push image to local registry
         run: |
           docker buildx imagetools create \
-            --tag localhost:5000/${{ env.IMAGE_NAME }}:stage1 \
-            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:stage1
+            --tag localhost:5000/stage1:latest \
+            stage1:latest
 
       - name: Build Docker image (stage 2)
         uses: docker/build-push-action@v3
         with:
           context: ./stage2
-          build-contexts: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:stage1=docker-image://localhost:5000/${{ env.IMAGE_NAME }}:stage1
+          build-contexts: stage1=docker-image://localhost:5000/stage1:latest
           push: ${{ github.event_name != 'pull_request' }}
           platforms: linux/armhf
           tags: ${{ steps.meta.outputs.tags }}
