--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,6 +66,24 @@ jobs:
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          driver-opts: network=host
+
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: stage1
+          path: /tmp
+
+      - name: Load image
+        run: |
+          docker load --input /tmp/stage1.tar
+          docker image ls -a
+
+      - name: Push image to local registry
+        run: |
+          docker image tag stage1:latest localhost:5000/stage1:latest
+          docker image push localhost:5000/stage1:latest
 
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -83,22 +101,6 @@ jobs:
             type=semver,pattern={{version}}
             type=ref,event=branch
             type=ref,event=pr
-
-      - name: Download artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: stage1
-          path: /tmp
-
-      - name: Load image
-        run: |
-          docker load --input /tmp/stage1.tar
-          docker image ls -a
-
-      - name: Push image to local registry
-        run: |
-          docker image tag stage1:latest localhost:5000/stage1:latest
-          docker image push localhost:5000/stage1:latest
 
       - name: Build Docker image (stage 2)
         uses: docker/build-push-action@v3
