--- a/stage3/Dockerfile
+++ b/stage3/Dockerfile
@@ -17,6 +17,13 @@ RUN yum erase -y openssl-devel && \
     rm -rf openssl-OpenSSL_1_1_1s* && \
     rm -rf OpenSSL_1_1_1s*
 
+RUN pip3.8 install certifi && \
+    certs=$(python3.8 -c 'import certifi; print(certifi.where())') && \
+    echo $certs && \
+    mkdir -p /opt/_internal && \
+    ln -s $certs /opt/_internal/certs.pem
+ENV SSL_CERT_FILE=/opt/_internal/certs.pem
+
 RUN pip3.7 install -U setuptools wheel && \
     pip3.8 install -U setuptools wheel && \
     pip3.9 install -U setuptools wheel && \
