--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -143,6 +143,64 @@ jobs:
           docker image tag stage2:latest localhost:5000/stage2:latest
           docker image push localhost:5000/stage2:latest
 
+      - name: Build Docker image (stage 3)
+        uses: docker/build-push-action@v3
+        with:
+          context: ./stage3
+          build-contexts: stage2=docker-image://localhost:5000/stage2:latest
+          push: false
+          platforms: linux/armhf
+          tags: stage3:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          outputs: type=docker,dest=/tmp/stage3.tar
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: stage3
+          path: /tmp/stage3.tar
+
+  build-image-stage4:
+    needs: build-image-stage3
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    services:
+      registry:
+        image: registry:2
+        ports:
+          - 5000:5000
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          driver-opts: network=host
+
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: stage3
+          path: /tmp
+
+      - name: Load image
+        run: |
+          docker load --input /tmp/stage3.tar
+          docker image ls -a
+
+      - name: Push image to local registry
+        run: |
+          docker image tag stage3:latest localhost:5000/stage3:latest
+          docker image push localhost:5000/stage3:latest
+
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -160,11 +218,11 @@ jobs:
             type=ref,event=branch
             type=ref,event=pr
 
-      - name: Build Docker image (stage 3)
+      - name: Build Docker image (stage 4)
         uses: docker/build-push-action@v3
         with:
-          context: ./stage3
-          build-contexts: stage2=docker-image://localhost:5000/stage2:latest
+          context: ./stage4
+          build-contexts: stage3=docker-image://localhost:5000/stage3:latest
           push: ${{ github.event_name != 'pull_request' }}
           platforms: linux/armhf
           tags: ${{ steps.meta.outputs.tags }}
