--- a/stage3/Dockerfile
+++ b/stage3/Dockerfile
@@ -4,7 +4,7 @@ RUN wget -q https://github.com/Kitware/CMake/releases/download/v3.25.1/cmake-3.2
     tar xf cmake-3.25.1.tar.gz && \
     cd cmake-3.25.1 && \
     ./bootstrap -- -DCMAKE_BUILD_TYPE:STRING=Release -DCMAKE_PREFIX_PATH=/usr/local/ssl && \
-    make && \
+    make -j4 && \
     make install && \
     cd .. && \
     rm -rf cmake-3.25.1*
