--- a/stage2/Dockerfile
+++ b/stage2/Dockerfile
@@ -32,6 +32,6 @@ RUN wget -q https://www.python.org/ftp/python/3.11.1/Python-3.11.1.tgz && \
     tar xf Python-3.11.1.tgz && \
     cd Python-3.11.1 && \
     ./configure --enable-optimizations && \
-    make -j4 altinstall && \
+    make altinstall && \
     cd .. && \
     rm -rf Python-3.11.1*
