--- a/stage5/Dockerfile
+++ b/stage5/Dockerfile
@@ -1,19 +1,3 @@
 FROM stage4
 
-RUN yum -y install gmp-devel mpfr-devel libmpc-devel
-RUN wget -q https://ftp.gnu.org/gnu/gcc/gcc-10.2.0/gcc-10.2.0.tar.xz && \
-    tar xf gcc-10.2.0.tar.xz && \
-    mkdir gcc-10.2.0-build && \
-    rm gcc-*.tar.xz
-WORKDIR gcc-10.2.0-build
-RUN ../gcc-10.2.0/configure \
-      --enable-languages=c,c++ \
-      --enable-shared \
-      --enable-threads=posix \
-      --enable-__cxa_atexit \
-      --enable-clocale=gnu \
-      --disable-multilib \
-      --with-system-zlib \
-      --with-float=hard \
-      --prefix=/usr/local/gcc/10.2.0
-RUN make -j4 && make install
+RUN echo "TBD"
