consolidate and install prebuilt devtoolset-10

--- a/stage2/Dockerfile
+++ b/stage2/Dockerfile
@@ -9,7 +9,7 @@ RUN wget -q https://github.com/Kitware/CMake/releases/download/v3.25.1/cmake-3.2
     cd .. && \
     rm -rf cmake-3.25.1*
 
-RUN wget https://github.com/ninja-build/ninja/archive/refs/tags/v1.11.1.tar.gz && \
+RUN wget -q https://github.com/ninja-build/ninja/archive/refs/tags/v1.11.1.tar.gz && \
     tar xvf v1.11.1.tar.gz && \
     cd ninja-1.11.1 && \
     python3.8 ./configure.py --bootstrap && \
@@ -18,11 +18,11 @@ RUN wget https://github.com/ninja-build/ninja/archive/refs/tags/v1.11.1.tar.gz &
     rm -rf ninja-1.11.1* && \
     rm -rf v1.11.1*
 
-RUN wget https://github.com/NixOS/patchelf/releases/download/0.17.0/patchelf-0.17.0-armv7l.tar.gz && \
+RUN wget -q https://github.com/NixOS/patchelf/releases/download/0.17.0/patchelf-0.17.0-armv7l.tar.gz && \
     tar xf patchelf-0.17.0-armv7l.tar.gz -C /usr/local/ && \
     rm -rf patchelf-0.17.0*
 
-RUN wget https://static.rust-lang.org/rustup/dist/armv7-unknown-linux-gnueabihf/rustup-init && \
+RUN wget -q https://static.rust-lang.org/rustup/dist/armv7-unknown-linux-gnueabihf/rustup-init && \
     chmod +x rustup-init && \
     ./rustup-init -y
 ENV PATH=$PATH:/root/.cargo/bin
@@ -43,7 +43,11 @@ RUN pip3.7 install -U setuptools wheel && \
 RUN ln -s /usr/local/bin/pip3.8 /usr/local/bin/pip
 RUN pip install auditwheel
 
-RUN wget https://go.dev/dl/go1.19.10.linux-armv6l.tar.gz && \
+RUN wget -q https://go.dev/dl/go1.19.10.linux-armv6l.tar.gz && \
     tar -C /usr/local -xzf go1.19.10.linux-armv6l.tar.gz && \
     rm go1.19.10.linux-armv6l.tar.gz
 ENV PATH=$PATH:/usr/local/go/bin
+
+RUN wget https://github.com/bjia56/armv7l-wheel-builder/releases/download/devtoolset-10-1/devtoolset-10.tar.gz && \
+    tar -C / -xzf devtoolset-10.tar.gz && \
+    rm devtoolset-10.tar.gz
