--- a/stage1/Dockerfile
+++ b/stage1/Dockerfile
@@ -21,8 +21,44 @@ RUN wget https://github.com/openssl/openssl/archive/refs/tags/OpenSSL_1_1_1s.tar
     tar xf OpenSSL_1_1_1s.tar.gz && \
     cd openssl-OpenSSL_1_1_1s && \
     ./config no-shared --prefix=/usr/local/ssl --openssldir=/usr/local/ssl CPPFLAGS="${MANYLINUX_CPPFLAGS}" CFLAGS="${MANYLINUX_CFLAGS} -fPIC" CXXFLAGS="${MANYLINUX_CXXFLAGS} -fPIC" LDFLAGS="${MANYLINUX_LDFLAGS} -fPIC" && \
-    make && \
+    make -j4 && \
     make install_sw && \
     cd .. && \
     rm -rf openssl-OpenSSL_1_1_1s* && \
     rm -rf OpenSSL_1_1_1s*
+
+RUN wget -q https://www.python.org/ftp/python/3.7.16/Python-3.7.16.tgz && \
+    tar xf Python-3.7.16.tgz && \
+    cd Python-3.7.16 && \
+    ./configure --enable-optimizations && \
+    make -j4 altinstall && \
+    cd .. && \
+    rm -rf Python-3.7.16*
+RUN wget -q https://www.python.org/ftp/python/3.8.16/Python-3.8.16.tgz && \
+    tar xf Python-3.8.16.tgz && \
+    cd Python-3.8.16 && \
+    ./configure --enable-optimizations && \
+    make -j4 altinstall && \
+    cd .. && \
+    rm -rf Python-3.8.16*
+RUN wget -q https://www.python.org/ftp/python/3.9.16/Python-3.9.16.tgz && \
+    tar xf Python-3.9.16.tgz && \
+    cd Python-3.9.16 && \
+    ./configure --enable-optimizations && \
+    make -j4 altinstall && \
+    cd .. && \
+    rm -rf Python-3.9.16*
+RUN wget -q https://www.python.org/ftp/python/3.10.9/Python-3.10.9.tgz && \
+    tar xf Python-3.10.9.tgz && \
+    cd Python-3.10.9 && \
+    ./configure --enable-optimizations && \
+    make -j4 altinstall && \
+    cd .. && \
+    rm -rf Python-3.10.9*
+RUN wget -q https://www.python.org/ftp/python/3.11.1/Python-3.11.1.tgz && \
+    tar xf Python-3.11.1.tgz && \
+    cd Python-3.11.1 && \
+    ./configure --enable-optimizations && \
+    make altinstall && \
+    cd .. && \
+    rm -rf Python-3.11.1*
