--- a/stage2/Dockerfile
+++ b/stage2/Dockerfile
@@ -38,7 +38,8 @@ RUN pip3.7 install -U setuptools wheel && \
     pip3.8 install -U setuptools wheel && \
     pip3.9 install -U setuptools wheel && \
     pip3.10 install -U setuptools wheel && \
-    pip3.11 install -U setuptools wheel
+    pip3.11 install -U setuptools wheel && \
+    pip3.12 install -U setuptools wheel 
 
 RUN ln -s /usr/local/bin/pip3.8 /usr/local/bin/pip
 RUN pip install auditwheel
