--- a/stage1/Dockerfile
+++ b/stage1/Dockerfile
@@ -59,13 +59,13 @@ RUN wget -q https://www.python.org/ftp/python/3.11.1/Python-3.11.1.tgz && \
     tar xf Python-3.11.1.tgz && \
     cd Python-3.11.1 && \
     ./configure --enable-optimizations && \
-    make altinstall && \
+    make -j4 altinstall && \
     cd .. && \
     rm -rf Python-3.11.1*
 RUN wget -q https://www.python.org/ftp/python/3.12.0/Python-3.12.0.tgz && \
     tar xf Python-3.12.0.tgz && \
     cd Python-3.12.0 && \
     ./configure --enable-optimizations && \
-    make altinstall && \
+    make -j4 altinstall && \
     cd .. && \
     rm -rf Python-3.12.0*
