--- a/stage1/Dockerfile
+++ b/stage1/Dockerfile
@@ -30,35 +30,42 @@ RUN wget https://github.com/openssl/openssl/archive/refs/tags/OpenSSL_1_1_1s.tar
 RUN wget -q https://www.python.org/ftp/python/3.7.16/Python-3.7.16.tgz && \
     tar xf Python-3.7.16.tgz && \
     cd Python-3.7.16 && \
-    ./configure --enable-optimizations && \
+    ./configure --with-lto=yes && \
     make -j4 altinstall && \
     cd .. && \
     rm -rf Python-3.7.16*
 RUN wget -q https://www.python.org/ftp/python/3.8.16/Python-3.8.16.tgz && \
     tar xf Python-3.8.16.tgz && \
     cd Python-3.8.16 && \
-    ./configure --enable-optimizations && \
+    ./configure --with-lto=yes && \
     make -j4 altinstall && \
     cd .. && \
     rm -rf Python-3.8.16*
 RUN wget -q https://www.python.org/ftp/python/3.9.16/Python-3.9.16.tgz && \
     tar xf Python-3.9.16.tgz && \
     cd Python-3.9.16 && \
-    ./configure --enable-optimizations && \
+    ./configure --with-lto=yes && \
     make -j4 altinstall && \
     cd .. && \
     rm -rf Python-3.9.16*
 RUN wget -q https://www.python.org/ftp/python/3.10.9/Python-3.10.9.tgz && \
     tar xf Python-3.10.9.tgz && \
     cd Python-3.10.9 && \
-    ./configure --enable-optimizations && \
+    ./configure --with-lto=yes && \
     make -j4 altinstall && \
     cd .. && \
     rm -rf Python-3.10.9*
 RUN wget -q https://www.python.org/ftp/python/3.11.1/Python-3.11.1.tgz && \
     tar xf Python-3.11.1.tgz && \
     cd Python-3.11.1 && \
-    ./configure --enable-optimizations && \
-    make altinstall && \
+    ./configure --with-lto=yes && \
+    make -j4 altinstall && \
     cd .. && \
     rm -rf Python-3.11.1*
+RUN wget -q https://www.python.org/ftp/python/3.12.0/Python-3.12.0.tgz && \
+    tar xf Python-3.12.0.tgz && \
+    cd Python-3.12.0 && \
+    ./configure --with-lto=yes && \
+    make -j4 altinstall && \
+    cd .. && \
+    rm -rf Python-3.12.0*
