--- a/stage2/Dockerfile
+++ b/stage2/Dockerfile
@@ -54,7 +54,7 @@ RUN wget https://github.com/bjia56/armv7l-wheel-builder/releases/download/devtoo
     rm devtoolset-10.tar.gz
 
 RUN wget https://github.com/bjia56/armv7l-wheel-builder/releases/download/devtoolset-10-binutils-1/binutils-2.35-5.el7.4.armv7hl.rpm && \
-    yum install binutils*.rpm && \
+    yum install -y binutils*.rpm && \
     cd /opt/rh/devtoolset-10/root/ && \
     rpm2cpio /binutils*.rpm | cpio -idmv && \
     rm /binutils*.rpm
