--- a/stage2/Dockerfile
+++ b/stage2/Dockerfile
@@ -1,14 +1,5 @@
 FROM stage1
 
-RUN wget -q https://mirrors.edge.kernel.org/pub/software/scm/git/git-2.45.1.tar.gz && \
-    tar xf git-2.45.1.tar.gz && \
-    cd git-2.45.1 && \
-    make configure && \
-    ./configure --prefix=/usr/local && \
-    make -j4 && \
-    make install && \
-    rm -rf git-2.45.1*
-
 RUN wget -q https://github.com/Kitware/CMake/releases/download/v3.25.1/cmake-3.25.1.tar.gz && \
     tar xf cmake-3.25.1.tar.gz && \
     cd cmake-3.25.1 && \
@@ -72,6 +63,16 @@ RUN wget https://github.com/bjia56/armv7l-wheel-builder/releases/download/devtoo
 RUN wget https://github.com/bjia56/armv7l-wheel-builder/releases/download/cross-pi-gcc-10-1/cross-pi-gcc.tar.gz && \
     tar -C / -xzf cross-pi-gcc.tar.gz && \
     rm cross-pi-gcc.tar.gz
+
+RUN wget -q https://mirrors.edge.kernel.org/pub/software/scm/git/git-2.45.1.tar.gz && \
+    tar xf git-2.45.1.tar.gz && \
+    cd git-2.45.1 && \
+    export PATH=/opt/rh/devtoolset-10/root/usr/bin:$PATH && \
+    make configure && \
+    ./configure --prefix=/usr/local && \
+    make -j4 && \
+    make install && \
+    rm -rf git-2.45.1*
 
 COPY select_python /usr/local/bin/select_python
 COPY select_go /usr/local/bin/select_go
