--- a/stage2/Dockerfile
+++ b/stage2/Dockerfile
@@ -19,12 +19,12 @@ RUN pip3.8 install certifi && \
     ln -s $certs /opt/_internal/certs.pem
 ENV SSL_CERT_FILE=/opt/_internal/certs.pem
 
-RUN pip3.7 install -U setuptools wheel && \
-    pip3.8 install -U setuptools wheel && \
-    pip3.9 install -U setuptools wheel && \
-    pip3.10 install -U setuptools wheel && \
-    pip3.11 install -U setuptools wheel && \
-    pip3.12 install -U setuptools wheel
+RUN pip3.7 install -U setuptools wheel packaging && \
+    pip3.8 install -U setuptools wheel packaging && \
+    pip3.9 install -U setuptools wheel packaging && \
+    pip3.10 install -U setuptools wheel packaging && \
+    pip3.11 install -U setuptools wheel packaging && \
+    pip3.12 install -U setuptools wheel packaging
 
 RUN ln -s /usr/local/bin/pip3.8 /usr/local/bin/pip
 RUN pip install auditwheel
