--- a/stage1/Dockerfile
+++ b/stage1/Dockerfile
@@ -104,7 +104,7 @@ RUN wget -q https://www.python.org/ftp/python/${PYTHON_313_VER}/Python-${PYTHON_
     tar xf Python-${PYTHON_313_VER}.tgz && \
     cd Python-${PYTHON_313_VER} && \
     export PATH=/opt/rh/devtoolset-10/root/usr/bin:$PATH && \
-    ./configure --with-lto=yes --disable-gil --with-mimalloc && \
+    ./configure --with-lto=yes --disable-gil --with-mimalloc --prefix=/usr/local/t && \
     make -j4 altinstall && \
     cd .. && \
     rm -rf Python-${PYTHON_313_VER}*
